# GIDGET

./: .env.example  .gitignore  ACTUAL_FIXES_IMPLEMENTATION_REPORT.md  AGENT_ACCURACY_ANALYSIS.md  AUDIT_REPORT.md  Architecture_Blueprint  COMPREHENSIVE_FIXES_RESOLUTION_REPORT.md  Concept_Note  Dockerfile  FULL_INDEPENDENT_VALIDATION_COMPLETE.md  GITHUB_PUSH_SUMMARY.md  GITHUB_VERIFICATION_REPORT.md  MINOR_ISSUES_RESOLUTION_REPORT.md  OPTIMIZED_AGENTS_SUMMARY.md  POST_AUTOFIX_FINAL_ANALYSIS_REPORT.md  README.md  REAL_INDEPENDENT_VALIDATION_IMPLEMENTED.md  SUPABASE_IMPLEMENTATION_COMPLETE.md  SUPABASE_USAGE_EXPLANATION.md  TASK_3_IMPLEMENTATION_SUMMARY.md  TASK_4.5_INDEPENDENT_VALIDATION_FIX.md  TASK_4.5_INDEPENDENT_VALIDATION_FIXED.md  TASK_4_COMPREHENSIVE_ANALYSIS_REPORT.md  TASK_4_FIXES_IMPLEMENTATION_REPORT.md  TASK_5_ISSUES_AND_FIXES_REPORT.md  TASK_6_INTERFACES_IMPLEMENTATION_COMPLETE.md  demo_accurate_agents.py  demo_agent_system.py  demo_caching_system.py  demo_complete_integration.py  demo_developer_workflow.py  demo_independent_validation.py  demo_optimized_agents.py  demo_real_llm_integration.py  demo_real_semantic_search.py  demo_regression_debugging.py  demo_semantic_search.py  demo_specialized_agents.py  demo_supabase_integration.py  docker-compose.dev.yml  (+11 more)
deployment/: prometheus.yml
docs/: README.md
tests/: __init__.py  conftest.py  performance_test_runner.py  run_tests.py  test_agent_fixes.py  test_agent_integration.py  test_agent_system.py  test_api_endpoints.py  test_caching.py  test_cli.py  test_database_optimization.py  test_fixes_validation.py  (+15 more)
(+112 files in other folders)
